# tmuxido

./: .drone.yml  .mcp.json  .tmuxido.toml  .tmuxido.toml.example  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  install.sh  tmuxido.desktop  tmuxido.toml.example
.claude/: settings.json
src/: cache.rs  config.rs  deps.rs  lib.rs  main.rs  self_update.rs  session.rs  shortcut.rs  ui.rs  update_check.rs
tests/: cache_lifecycle.rs  deps.rs  scan.rs  session_config.rs  shortcut.rs
tests/docker/: Dockerfile  entrypoint.sh  run.sh
